--- a/equipment/index.html
+++ b/equipment/index.html
@@ -144,7 +144,7 @@
 <p><tag>裝填 (Reload)</tag>: 在你以它進行攻擊之後，會需要稍多一點的時間來重置裝填才能進行下一次攻擊。</p>
 <p><tag>暈眩 (Stun)</tag>: 當你以它進行攻擊時，它將造成暈眩傷害，而非正常的傷害。</p>
 <p><tag>投擲 (Thrown)</tag>: 把它擲向目標以造成傷害。若你以此武器進行射擊動作，你在擲出7~9時將不能選擇標記彈藥-1；一旦你把它擲出，直到你把它拾回之前都將視作失去它。</p>
-<p>武器也帶有用來表示其作用範圍的標籤。地城世界並不會為「最佳作用範圍」而提供減值或加值，但如果你的武器帶著「觸及」標籤，而你的敵人距離你10碼之外，那麼玩家將會難以證明他使用這把武器來對付那名敵人。</p>
+<p>武器也帶有用來表示其作用範圍的標籤。地城世界並不會為「最佳作用範圍」而提供減值或加值，但如果你的武器帶著「觸及」標籤，而你的敵人距離你10碼之外，那麼玩家將會發現他很難說明自己是如何使用這把武器來對付那名敵人。</p>
 <p><tag class="red">觸及 (Hand)</tag>: 它適合用來攻擊位於你徒手接觸範圍內的事物，不能再遠了。</p>
 <p><tag class="red">近身 (Close)</tag>: 它適合用來攻擊位於徒手觸及距離再加上一到二英尺範圍內的事物。</p>
 <p><tag class="red">及遠 (Reach)</tag>: 它適合用來攻擊數英尺遠的事物－－或許最遠十英尺。</p>
