--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -136,34 +136,56 @@
 	✴擲出10+時，你對敵人造成傷害並避開其攻擊。你也可以選擇造成額外+1d6傷害，但將自己暴露在敵人的攻擊之下。<br/>
 	✴擲出7-9時，你對敵人造成傷害，但敵人的攻擊也擊中了你。</p></div>
 
-<p class="NoIndent">Moves are rules that tell you when they trigger and what effect they have. A move depends on a fictional action and always has some fictional effect. “Fictional” means that the action and effect come from the world of the characters we’re describing. In the move above the trigger is “when you attack an enemy in melee.” The effect is what follows: a roll to be made and differing fictional effects based on the outcome of the roll.</p>
-<p>When a player describes their character doing something that triggers a move, that move happens and its rules apply. If the move requires a roll, its description will tell you what dice to roll and how to read their results.</p>
-<p>A character can’t take the fictional action that triggers a move without that move occurring. For example, if Isaac tells the GM that his character dashes past a crazed axe-wielding orc to the open door, he makes the defy danger move because its trigger is “when you act despite an imminent threat.” Isaac can’t just describe his character running past the orc without making the defy danger move and he can’t make the defy danger move without acting despite an imminent threat or suffering a calamity. The moves and the fiction go hand-in-hand.</p>
-<p>Everyone at the table should listen for when moves apply. If it’s ever unclear if a move has been triggered, everyone should work together to clarify what’s happening. Ask questions of everyone involved until everyone sees the situation the same way and then roll the dice, or don’t, as the situation requires.</p>
-<p>The GM’s monsters, NPCs, and other assorted beasties also have moves, but they work differently.</p>
-<h3>Moves and Dice</h3>
-<p class="NoIndent">Most moves include the phrase “roll+x” where “x” is one of your character’s ability modifiers (CON for example). Unless the move tells you otherwise, that “roll” always means that you roll two six-sided dice and add their results to the value of the modifier. Some moves will have you add some other value to your roll instead of an ability modifier.</p>
-<p class="Example">I’m making a move that asks me to roll+STR and my STR modifier is +1. I rolled two six-sided dice, got a one and a four. My total is six.</p>
-<p class="NoIndent">The results always fall into three basic categories. A total of 10 or higher (written 10+) is the best outcome. A total of 7–9 is still a success but it comes with compromises or cost. A 6 or lower is trouble, but you also get to mark XP.</p>
-<p>Each move will tell you what happens on a 10+ and a 7–9. Most moves won’t say what happens on a 6-, that’s up to the GM but you also always mark XP.</p>
-<p>Damage rolls work a little differently. They use different dice depending on who or what is dealing damage.</p>
-<h3>Moves and Equipment</h3>
-<p class="NoIndent">The most important role of a character’s equipment is to help describe the moves they make. A character without a weapon of some sort isn’t going to trigger the hack and slash move when fighting a dragon since a bare-knuckle punch really doesn’t do much to inch-thick scales. It doesn’t count for the purposes of triggering the move.</p>
-<p>Likewise, sometimes equipment will avoid triggering a move. Climbing a sheer icy cliff is usually defying danger, but with a good set of climbing gear you might be able to avoid the imminent danger or calamity that triggers the move.</p>
-<p>Weapons are particularly likely to modify what moves you can trigger. A character with a dagger can easily stab the goblin gnawing on his leg, triggering hack and slash, but the character with a halberd is going to have a much harder time bringing it to bear on such a close foe.</p>
-<p>Items and gear of every sort have tags. Tags are terms to describe things. Some tags have a specific effect on the rules (things like damage reduction on armor or a magical bonus to a particular kind of move or stat). Other tags are purely about the fiction (like the close tag, which describes the length of a weapon and how near your enemies need to be for you to attack them). Tags help you describe your character’s actions when the items are being used and they give the GM information about how the items you’re using might go wrong or cause complications when you fail a roll.</p>
-<h3>The Effects of Moves</h3>
-<p class="NoIndent">The effects of moves are always about the fictional world the characters inhabit. A 10+ on hack and slash doesn’t just mean the mechanical effects, it means you successfully attacked something and did some type of harm to it.</p>
-<p>Once you’ve figured out what the effects of the move are, apply them to the fiction and go back to the conversation. Always return to what’s going on in the game.</p>
-<p>Some moves have immediate mechanical effects, like dealing damage or giving someone a bonus to their next roll. These effects are always a reflection of the fictional world the characters are in; make sure to use the fiction when describing the effects of the move.</p>
-<h4>Some Moves…</h4>
-<p class="NoIndent">…Use the phrase “deal damage.” Dealing damage means you roll the damage dice for your class; sometimes your weapon will add or subtract damage too. You use your damage dice any time you make an attack that could reasonably hurt your target. Usually that means you’re wielding a weapon, but your fists can be weapons with the right training or an interesting situation</p>
-<p>…Say “take +1 forward.” That means to take +1 to your next move roll (not damage). The bonus can be greater than +1, or even a penalty, like -1. There also might be a condition, such as “take +1 forward to hack and slash,” in which case the bonus applies only to the next time you roll hack and slash, not any other move.</p>
-<p>…Say “take +1 ongoing.” That means to take +1 to all move rolls (not damage). The bonus can be larger than +1, or it can be a penalty, like -1. There also might be a condition, such as “take +1 ongoing to volley.” An ongoing bonus also says what causes it to end, like “until you dismiss the spell” or “until you atone to your deity.”</p>
-<p>…Give you “hold.” Hold is currency that allows you to make some choices later on by spending the hold as the move describes. Hold is always saved up for the move that generated it; you can’t spend your hold from defend on trap expert or vice versa, for example.</p>
-<p>…Present a choice. The choice you make, like all move effects, dictates things that happen in the fiction in addition to any more mechanical effects. The choice you make on the 10+ result of hack and slash to deal more damage at the cost of opening yourself up is exactly what’s happening to your character: they have enough advantage that they can stay safe or push their luck.</p>
-<p>…Give you a chance to say something about your character and their history. When you spout lore you may get asked how you know the information that the GM reveals. Take that opportunity to contribute to the game and show who your character really is. Just keep in mind the established facts and don’t contradict anything that’s already been described.</p>
-<p>…Say “mark XP.” That means you add one to your current XP total.</p>
+<p class="NoIndent">
+	每個動作都會告訴你它們將在何時被觸發，且會造成什麼樣的效果。動作的觸發與否取決於角色在故事中的行動，且它永遠會對故事帶來影響。這裡使用「故事」這個詞，代表著這些行動和效果都是發生在我們所描繪的角色們所身處的世界。以上述動作為例，這個動作的觸發條件是「當你以近戰肉搏攻擊敵人」，而它的效果則是：要求擲骰，並根據骰出的結果而帶來不同的故事影響。</p>
+<p>
+	當玩家描述他們的角色做了一個會觸發某個動作的行為時，則那個動作就會發生，且其規則也將被適用。如果該動作需要擲骰，則其說明會告訴你該擲什麼，以及該如何解讀擲骰的結果。</p>
+<p>
+	角色無法在不觸發動作的情況下做出那些會觸發動作的行為。舉例來說，如果艾薩克跟GM說他的角色打算衝過一群揮舞著斧頭的瘋狂獸人把門打開，那麼因為「面對危險」這個動作的觸發條件是「當你在迫在眉睫的威脅之下採取行動」，因此顯然的，他將必須進行「面對危險」的動作。艾薩克不能只是描述他的角色直接越過這群獸人，而不進行「面對危險」動作。另一方面，他也不能夠在沒有面臨任何危險的情況下進行「面對危險」的動作。動作與故事中的敘事是環環相扣的。</p>
+<p>
+	遊戲中的每個玩家都該留神注意動作被觸發的時機。倘若你不清楚動作是否該被觸發，則讓大家一起討論，釐清發生了什麼事。對每個參與者提問，直到確定所有人都達成了共識，然後依據當下情況決定是否需要擲骰。</p>
+<p>
+	GM操控的怪物、NPC、和其他各式各樣的野獸同樣擁有動作，但它們的運作方式截然不同（參見GM章節的說明）。</p>
+
+<h3>動作與擲骰</h3>
+<p class="NoIndent">
+	大部分動作的說明中都包含了「擲+XX」的字眼，這裡的「XX」通常會是你角色的其中一項屬性調整值（例如說+體質）。除非動作另有說明，否則這裡所寫的「擲」指的永遠會是擲兩顆六面骰後，將其擲骰結果加上調整值的數值。某些動作會要求你在擲骰後加上其他數值，而非屬性調整值。</p>
+<p class="Example">
+	我正要進行一個動作，這個動作要求我擲 +力量，而我的力量調整值是+1。我擲兩顆六面骰，骰出一個 1 和一個 4。因此我的擲骰結果總計為 6。</p>
+<p class="NoIndent">
+	擲骰結果被分成三種：當擲骰結果的總和10或更高時（記作10+），你得到最好的結果。總和為7-9 時，你仍然成功，但必須做出妥協或付出代價。總和為 6 或更低則代表著麻煩，但你也因此得以標記一點經驗值。</p>
+<p>
+	每個動作都會告訴你在擲出10+與7-9時分別會發生什麼事。大多數的動作並不會說明擲出6-時的後果，實際上發生什麼事情將由GM進行決定，但無論如何你都可以因此獲得經驗值。</p>
+<p>骰傷害的方式有點不太一樣。根據造成傷害的角色和造成傷害的方式不同，使用的骰子也有所不同。</p>
+
+<h3>動作與裝備</h3>
+<p class="NoIndent">
+	角色裝備最重要的功能，就是幫助角色們描述他們所進行的動作。一個手無寸鐵的角色在與巨龍戰鬥的時候沒有辦法觸發「砍劈」動作，畢竟當你赤手空拳時，你可拿那幾吋厚的龍鱗一點辦法也沒有，因此這麼做並不會被視作觸發「砍劈」動作。</p>
+<p>
+	同樣的，有時候裝備也能避免角色觸發某些動作。舉例來說，徒手攀爬陡峭結冰的峭壁通常會觸發「面對危險」的動作，但如果你擁有一整套完善的攀登裝備，那麼也許你就能夠避免引發那些會觸發這個動作的危險和災難。</p>
+<p>
+	其中，武器尤其可能會影響到你所能觸發的動作。手持匕首的角色或許能輕易刺向那頭咬著自己小腿不放的哥布林，並觸發「砍劈」動作；但手持斧槍的角色可能就很難將手中那把長柄武器往距離這麼近的敵人身上招呼。</p>
+<p>
+	每一種物品和裝備都帶有「標籤」。這些標籤是一種用來描述事物特性的詞句。有些標籤擁有會影響規則的特殊效果（例如防具提供的傷害減免、或者讓特定動作或屬性值獲得魔法加值的效果等等）；而其他標籤則純粹代表著敘事的描述（例如「近身」標籤表示了你的武器長度、以及敵人必須距離你多近才能讓你攻擊他）。標籤能夠幫助你描述角色在使用這些物品時的行動，並在你擲骰失敗時為GM提供情報參考，以決定你可能是如何失手、或可能導致什麼樣的混亂。</p>
+
+<h3>動作的效果</h3>
+<p class="NoIndent">
+	動作的效果總是與角色們所居住的遊戲世界有關。在「砍劈」中擲出10+並不僅僅意味著遊戲機制上的效果，還代表了你成功地攻擊了某個東西，並對它造成了某種傷害。</p>
+<p>
+	一旦你明白了每個動作的效果是怎麼回事，將它帶入敘事情節中，並重新回到對話當中。永遠專注在遊戲內所發生的事情上。</p>
+<p>
+	有些動作會帶來立即性的機制效果，像是造成傷害、或讓某個人在下次擲骰時獲得加值。這些效果永遠會反映出角色們所身處世界上的故事發展；在你描述動作的效果時，記得使用敘事呈現出故事的發展變化。</p>
+
+<h4><b>有些動作……</b></h4>
+<ul class="List">
+<li><b>…寫著「造成傷害」。</b> Dealing damage means you roll the damage dice for your class; sometimes your weapon will add or subtract damage too. You use your damage dice any time you make an attack that could reasonably hurt your target. Usually that means you’re wielding a weapon, but your fists can be weapons with the right training or an interesting situation</li>
+<li><b>…寫著「下次+1」。</b>  That means to take +1 to your next move roll (not damage). The bonus can be greater than +1, or even a penalty, like -1. There also might be a condition, such as “take +1 forward to hack and slash,” in which case the bonus applies only to the next time you roll hack and slash, not any other move.</li>
+<li><b>…寫著「持續+1」。</b>  That means to take +1 to all move rolls (not damage). The bonus can be larger than +1, or it can be a penalty, like -1. There also might be a condition, such as “take +1 ongoing to volley.” An ongoing bonus also says what causes it to end, like “until you dismiss the spell” or “until you atone to your deity.”</li>
+<li><b>…會給你「掌握」。</b>  Hold is currency that allows you to make some choices later on by spending the hold as the move describes. Hold is always saved up for the move that generated it; you can’t spend your hold from defend on trap expert or vice versa, for example.</li>
+<li><b>…要你進行選擇。</b>  The choice you make, like all move effects, dictates things that happen in the fiction in addition to any more mechanical effects. The choice you make on the 10+ result of hack and slash to deal more damage at the cost of opening yourself up is exactly what’s happening to your character: they have enough advantage that they can stay safe or push their luck.</li>
+<li><b>…給你機會述說關於你角色的事情和過往。</b>  When you spout lore you may get asked how you know the information that the GM reveals. Take that opportunity to contribute to the game and show who your character really is. Just keep in mind the established facts and don’t contradict anything that’s already been described.</li>
+<li><b>…寫著「標記經驗值」。</b>  That means you add one to your current XP total.</li>
+</ul>
 <hr/>
 
 
@@ -349,30 +371,44 @@
 <li>Good Accomplished</li></ul>
 <h3>Skills</h3>
 <p class="NoIndent">When you make a hireling, distribute points among one or more of these skills.</p>
+<div class="Hireling">
 <h4>Adept</h4>
 <p class="NoIndent">An adept has at least apprenticed to an arcane expert, but is not powerful in their own right. They’re the grad students of the arcane world.</p>
 <p><em>Arcane Assistance</em>—When an adept aids in the casting of a spell of lower level than their skill, the spell’s effects have greater range, duration, or potency. The exact effects depend on the situation and the spell and are up to the GM. The GM will describe what effects the assist will add before the spell is cast. The most important feature of casting with an adept is that any negative effects of the casting are focused on the adept first.</p>
+</div>
+<div class="Hireling">
 <h4>Burglar</h4>
 <p class="NoIndent">Burglars are skilled in a variety of areas, most of them illicit or dangerous. They are good with devices and traps, but not too helpful in the field of battle.</p>
 <p><em>Experimental Trap Disarming</em>—When a burglar leads the way they can detect traps almost in time. If a trap would be sprung while a burglar is leading the way the burglar suffers the full effects but the players get +skill against the trap and add the burglar’s skill to their armor against the trap. Most traps leave a burglar in need of immediate healing. If the players Make Camp near the trap, the burglar can disarm it by the time camp is broken.</p>
+</div>
+<div class="Hireling">
 <h4>Minstrel</h4>
 <p class="NoIndent">When a smiling face is needed to smooth things over or negotiate a deal a minstrel is always happy to lend their services for the proper price.</p>
 <p><em>A Hero’s Welcome</em>—When you enter a place of food, drink, or entertainment with a minstrel you will be treated as a friend by everyone present (unless your actions prove otherwise). You also subtract the minstrel’s skill from all prices in town.</p>
+</div>
+<div class="Hireling">
 <h4>Priest</h4>
 <p class="NoIndent">Priests are the lower ranking clergy of a religion, performing minor offices and regular sacraments. While not granted spells themselves, they are able to call upon their deity for minor aid.</p>
 <p><em>Ministry</em>—When you make camp with a priest if you would normally heal you heal +skill HP.</p>
 <p><em>First Aid</em>—When a priest staunches your wounds heal 2×skill HP. You take -1 forward as their healing is painful and distracting.</p>
+</div>
+<div class="Hireling">
 <h4>Protector</h4>
 <p class="NoIndent">A protector stands between their employer and the blades, fangs, teeth, and spells that would harm them. </p>
 <p><em>Sentry</em>—When a protector stands between you and an attack you increase your armor against that attack by the defender’s skill, then reduce their skill by 1 until they receive healing or have time to mend.</p>
 <p><em>Intervene</em>—When a protector helps you defy danger you may opt to take +1 from their aid. If you do you cannot get a 10+ result, a 10+ instead counts as a 7–9.</p>
+</div>
+<div class="Hireling">
 <h4>Tracker</h4>
 <p class="NoIndent">Trackers know the secrets of following a trail, but they don’t have the experience with strange creatures and exotic locales that make for a great hunter.</p>
 <p><em>Track</em>—When a tracker is given time to study a trail while Making Camp, when camp is broken they can follow the trail to the next major change in terrain, travel, or weather.</p>
 <p><em>Guide</em>—When a tracker leads the way you automatically succeed on any Perilous Journey of a distance (in rations) lower than the tracker’s skill.</p>
+</div>
+<div class="Hireling">
 <h4>Warrior</h4>
 <p class="NoIndent">Warriors are not masters of combat, but they are handy with a weapon.</p>
 <p><em>Man-at-arms</em>—When you deal damage while a warrior aids you add their skill to the damage done. If your attack results in consequences (like a counter attack) the man-at-arms takes the brunt of it.</p>
+</div>
 <hr/>
 
 
