--- a/classes/thief/index.html
+++ b/classes/thief/index.html
@@ -138,7 +138,7 @@
 <div class="Move"><h3 class="MoveName">Human</h3>
 <p class="NoIndent">You are a professional. When you spout lore or discern realities about criminal activities, take +1.</p></div></div>
 <div id="classmoves"><p class="Instructions">You start with these moves:</p>
-<div class="Move"><h3 class="BasicMoveName">Trap Expert</h3>
+<div class="Move"><h3 class="BasicMoveName">陷阱專家 (Trap Expert)</h3>
 <p class="NoIndent">When you <strong>spend a moment to survey a dangerous area</strong>, roll+DEX. ✴On a 10+, hold 3. ✴On a 7–9, hold 1. Spend your hold as you walk through the area to ask these questions:</p>
 <ul><li>Is there a trap here and if so, what activates it?</li>
 <li>What does the trap do when activated?</li>
