--- a/equipment/index.html
+++ b/equipment/index.html
@@ -174,7 +174,7 @@
 <h3>防具標籤</h3>
 <p class="NoIndent">防具跟武器一樣帶有標籤。儘管有些標籤只是純粹的描述詞，但下列標籤能夠在玩家穿戴它們的時候帶來一些機制上的效果。</p>
 <p><tag>n 護甲 (n Armor)</tag>: 它能夠保護你不受傷害。當你受到傷害時，將總傷害減去你的護甲值。如果你有超過一個帶有<em>ｎ護甲</em>標籤的物品，則只有數值最高的那個會納入計算。</p>
-<p><tag>+n 護甲 (+n Armor)</tag>: 它能夠保護你，且能夠與其他防具的護甲疊加。將它的數值加到你的總護甲值中。</p>
+<p><tag>+n 護甲 (+n Armor)</tag>: 它能夠保護你，且能夠與其他防具的護甲值疊加。將它的數值加到你的總護甲值中。</p>
 <p><tag>笨重 (Clumsy)</tag>: 穿戴它時將難以四處走動。當使用它時，檢定持續-1。這個減值會累積。</p>
 <h3>防具列表</h3>
 <p class="Item">皮甲, 鏈甲	<span class="Tags">1 護甲, 穿戴, 10 金幣, 1 重量</span></p>
