--- a/monsters/folk/index.html
+++ b/monsters/folk/index.html
@@ -137,7 +137,7 @@
 	<li>索要貢品</li>
 </ul>
 <h3 class="MonsterName">強盜王 (Bandit King)<span class="Tags">單獨, 聰穎, 組織</span></h3>
-<p class="MonsterStats">愛刀 (b[2d10] 傷害), 12 HP, 1 護甲</p>
+<p class="MonsterStats">愛刀 (高[2d10] 傷害), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">
 	寧在地獄為王，不在天堂稱臣。 <b>本能</b>: 領導</p>
@@ -163,7 +163,7 @@
 	<li>賺錢</li>
 </ul>
 <h3 class="MonsterName">半身人盜賊 (Halfling Thief)<span class="Tags">單獨, 小型, 聰穎, 隱匿, 狡猾</span></h3>
-<p class="MonsterStats">匕首 (w[2d8] 傷害), 12 HP, 1 護甲</p>
+<p class="MonsterStats">匕首 (低[2d8] 傷害), 12 HP, 1 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">
 	聽好，只因為他們剛好擅長某事就對整個族群下結論，是件相當愚蠢的行為。再說一次，不要拐彎抹角，好嗎？也許只是那類好心、溫柔且甜美的半身人剛好比較願意待在他們那草木青青的家中，而你在酒館和貧民窟內發現的半身人剛好不是這類人。也許他們幹走你的皮包的原因，是因為你一開始稱呼他們為「半身人」，嘿，不是每個人都喜歡這個稱呼。或者他們可能只是在玩遊戲，假裝成需要幫忙的孩童－－而你驕傲自大的眼神直到一切都太遲之前都甚至完全沒發現其中的區別。好吧，這也不重要了。在你意識到這是你應得的之前，他們早已帶著你的金幣遠走高飛。 <b>本能</b>: 過著偷盜而來的奢華人生</p>
@@ -195,7 +195,7 @@
 	<li>從荒野中帶回新消息</li>
 	<li>屠殺一頭野獸</li></ul>
 <h3 class="MonsterName">騎士 (Knight)<span class="Tags">單獨, 聰穎, 組織, 謹慎</span></h3>
-<p class="MonsterStats">利劍 (b[2d10] 傷害), 12 HP, 4 護甲</p>
+<p class="MonsterStats">利劍 (高[2d10] 傷害), 12 HP, 4 護甲</p>
 <p class="MonsterStats"><span class="Tags">近身</span></p>
 <p class="MonsterDescription">
 	有哪個年輕人在激烈的比武大賽中能不緊抓欄杆，任憑那耀眼盔甲照得自己睜不開眼，無法抑制心中的渴望，希冀自己就是那位身披鋼鎧，騎馬衝鋒以取悅國王與王后的尊貴騎士？又有哪個除了麵包和一頭瘸腿母豬之外一無所有的農家青年，會不願傾家蕩產以換取一柄長矛和鮮豔旌旗？騎士意味著許多事──神聖的戰士、奉獻於誓言的寶劍、有時也可能會是個惡棍。但對於所有看著她的群眾，騎士只能是一個象徵。騎士確實意義非凡。 <b>本能</b>: 遵循典範而活</p>
