--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -166,7 +166,7 @@
 <p>
 	其中，武器尤其可能會影響到你所能觸發的動作。手持匕首的角色或許能輕易刺向那頭咬著自己小腿不放的哥布林，並觸發「砍劈」動作；但手持斧槍的角色可能就很難將手中那把長柄武器往距離這麼近的敵人身上招呼。</p>
 <p>
-	每一種物品和裝備都帶有「標籤」。這些標籤是一種用來描述事物特性的詞句。有些標籤擁有會影響規則的特殊效果（例如防具提供的傷害減免、或者讓特定動作或屬性值獲得魔法加值的效果等等）；而其他標籤則純粹代表著敘事的描述（例如「近身」標籤表示了你的武器長度、以及敵人必須距離你多近才能讓你攻擊他）。標籤能夠幫助你描述角色在使用這些物品時的行動，並在你擲骰失敗時為GM提供情報參考，以決定你可能是如何失手、或可能導致什麼樣的混亂。</p>
+	每一種物品和裝備都帶有「標籤」。這些標籤是一種用來描述事物特性的詞句。有些標籤擁有會影響規則的特殊效果（例如護甲提供的傷害減免、或者讓特定動作或屬性值獲得魔法加值的效果等等）；而其他標籤則純粹代表著敘事的描述（例如「近身」標籤表示了你的武器長度、以及敵人必須距離你多近才能讓你攻擊他）。標籤能夠幫助你描述角色在使用這些物品時的行動，並在你擲骰失敗時為GM提供情報參考，以決定你可能是如何失手、或可能導致什麼樣的混亂。</p>
 
 <h3>動作的效果</h3>
 <p class="NoIndent">
@@ -178,64 +178,103 @@
 
 <h4><b>有些動作……</b></h4>
 <ul class="List">
-<li><b>…寫著「造成傷害」。</b> Dealing damage means you roll the damage dice for your class; sometimes your weapon will add or subtract damage too. You use your damage dice any time you make an attack that could reasonably hurt your target. Usually that means you’re wielding a weapon, but your fists can be weapons with the right training or an interesting situation</li>
-<li><b>…寫著「下次+1」。</b>  That means to take +1 to your next move roll (not damage). The bonus can be greater than +1, or even a penalty, like -1. There also might be a condition, such as “take +1 forward to hack and slash,” in which case the bonus applies only to the next time you roll hack and slash, not any other move.</li>
-<li><b>…寫著「持續+1」。</b>  That means to take +1 to all move rolls (not damage). The bonus can be larger than +1, or it can be a penalty, like -1. There also might be a condition, such as “take +1 ongoing to volley.” An ongoing bonus also says what causes it to end, like “until you dismiss the spell” or “until you atone to your deity.”</li>
-<li><b>…會給你「掌握」。</b>  Hold is currency that allows you to make some choices later on by spending the hold as the move describes. Hold is always saved up for the move that generated it; you can’t spend your hold from defend on trap expert or vice versa, for example.</li>
-<li><b>…要你進行選擇。</b>  The choice you make, like all move effects, dictates things that happen in the fiction in addition to any more mechanical effects. The choice you make on the 10+ result of hack and slash to deal more damage at the cost of opening yourself up is exactly what’s happening to your character: they have enough advantage that they can stay safe or push their luck.</li>
-<li><b>…給你機會述說關於你角色的事情和過往。</b>  When you spout lore you may get asked how you know the information that the GM reveals. Take that opportunity to contribute to the game and show who your character really is. Just keep in mind the established facts and don’t contradict anything that’s already been described.</li>
-<li><b>…寫著「標記經驗值」。</b>  That means you add one to your current XP total.</li>
+<li><b>…寫著「造成傷害」。</b>
+	造成傷害代表你使用你職業的傷害骰進行擲骰；有時候，你的武器也會為傷害骰提供加值或減值。任何時候當你做出了能夠合理地傷害到目標的攻擊時，你使用你的傷害骰以決定造成的傷害。通常來說這代表著你正揮舞武器發動攻擊，但若經過充分訓練、或在某些有趣的特殊情況下，你也可能僅憑赤手空拳就造成傷害。</li>
+<li><b>…寫著「下次+1」。</b>
+	代表你在下一次為動作擲骰（傷害骰除外）時，你將獲得+1 的加值。這個加值可以是大於+1 的數值，也可能甚至是-1 之類的減值。有時候這個加值會限定它所能適用的情境，例如「砍劈獲得下次+1」，意味著這個加值只會在你下次為砍劈動作擲骰時才會適用，而不會應用於其他動作。</li>
+<li><b>…寫著「持續+1」。</b>
+	代表你在接下來為所有動作擲骰（傷害骰除外）時，都將獲得+1 的加值。這個加值可以是大於+1 的數值，也可能甚至是-1 之類的減值。有時候這個加值會限定它所能適用的情境，例如「射擊獲得持續+1」。持續的加值也會言明它的結束條件，像是「直到你把該法術解消」或「直到你向你的神明贖罪」。</li>
+<li><b>…會給你「掌握」。</b>
+	「掌握」就像是一種貨幣，讓你在這之後可以決定是否要按照該動作的說明，藉由消耗「掌握」來發揮某些效果。因某個動作而產生的「掌握」永遠只能被用於該動作上；舉例來說，你不能把你在保衛動作中獲得的「掌握」用在陷阱專家動作上，反之亦然。</li>
+<li><b>…要你進行選擇。</b>
+	就跟所有動作的效果一樣，你所做出的選擇除了遊戲機制層面的影響之外，也代表著故事中所發生的事情。舉例來說，當你在砍劈動作中擲出10+的結果，並選擇了將自己暴露在敵人攻擊以造成更多傷害，這個選擇也正是發生在你角色身上的事情：他在這次的行動中佔盡優勢，他甚至有餘裕去選擇要保持安全、還是要冒險挑戰極限。</li>
+<li><b>…給你機會述說關於你角色的事情和過往。</b>
+	當你在憶述見聞時，你可能會被問到為什麼你的角色知道GM所揭曉的這些資訊。把握這個機會為遊戲添加細節，展現你的角色究竟是什麼樣的人。你只需要謹記那些已經被確定的情報，並小心不要違反任何已經被描寫的事實。</li>
+<li><b>…寫著「標記經驗值」。</b>
+	代表你獲得 1 點經驗值，將其加到你當前的經驗值總和中。</li>
 </ul>
 <hr/>
 
 
 <h2>傷害與治療 (Harm and Healing)</h2>
-<p class="NoIndent">Cuts, bruises, and mortal wounds are common dangers for adventurers to face in Dungeon World. In the course of play, characters will take damage, heal, and maybe even die. A character’s health is measured by their hit points (HP). Damage subtracts from HP. In the right conditions, or with medical or magical help, damage is healed and HP is restored.</p>
-<h3>HP</h3>
-<p class="NoIndent">A character’s HP is a measure of their stamina, endurance, and health. More HP means the character can fight longer and endure more trauma before facing Death’s cold stare.</p>
-<p>Your class tells your maximum HP. Your Constitution (the ability, not the modifier) comes into play as well, so more Constitution means more HP. If your Constitution permanently changes during play you adjust your HP to reflect your new Constitution score. Unless your Constitution changes your maximum HP stays the same.</p>
-<h3>Damage</h3>
-<p class="NoIndent">When a character takes damage they subtract the damage dealt from their current HP. Armor mitigates damage; if a character has armor they subtract its value from the damage dealt. This might mean a blow is turned away completely—that’s fine, it’s what armor is for! Damage can never take a character below 0 HP.</p>
-<p>Damage is determined by the attacker. Player characters deal damage according to their class, the weapon used, and the move they’ve made.</p>
-<p>If a move just says “deal damage” the character rolls their class’s damage dice plus any bonuses or penalties from moves, weapons, or effects. If a move specifies an amount of damage, use that in place of the class’s damage roll.</p>
-<p>Monsters roll damage as listed in their description. Use this damage any time the monster takes direct action to hurt someone, even if they use a method other than their normal attack.</p>
-<p>Other sources of damage—like being struck by a chunk of a collapsing tower, or falling into a pit—are left to the GM based on these options:</p>
-<ul><li>It threatens bruises and scrapes at worst: d4 damage</li>
-<li>It’s likely to spill some blood, but nothing horrendous: d6 damage</li>
-<li>It might break some bones: d8 damage</li>
-<li>It could kill a common person: d10 damage</li></ul>
-<p class="NoIndent">Add the <em>ignores armor</em> tag if the source of the damage is particularly large or if the damage comes from magic or poison.</p>
-<p>Temporary or circumstantial armor works the same way as armor that you wear: 1 armor for partial cover, 2 armor for major cover.</p>
-<p>Damage is dealt based on the fiction. Moves that deal damage, like hack and slash, are just a special case of this: the move establishes that damage is being dealt in the fiction. Damage can be assigned even when no move is made, if it follows from the fiction.</p>
-<p>HP loss is often only part of the effect. If the harm is generalized, like falling into a pit, losing the HP is probably all there is to it. When the harm is specific, like an orc pulling your arm from its socket, HP should be part of the effect but not the entirety of it. The bigger issue is dealing with the newly busted arm: how do you swing a sword or cast a spell? Likewise having your head chopped off is not HP damage, it’s just you being dead.</p>
-<h4>Damage From Multiple Creatures</h4>
-<p class="NoIndent">It’s a brave monster that goes into battle alone. Most creatures fight with someone at their side, and maybe another at their back, and possibly an archer covering the rear, and so on. This can lead to multiple monsters dealing their damage at once.</p>
-<p>If multiple creatures attack at once roll the highest damage among them and add +1 damage for each monster beyond the first.</p>
-<p class="Example">A goblin orkaster (d10+1 damage ignores armor) and three goblins (d6 damage) all throw their respective weapons—a magical acid orb for the orkaster, spears for the rest—at Lux as she assaults their barricade. I roll the highest damage, d10+1 ignores armor, and add +3 damage for the three other goblins. Adding it all up I tell Lux she takes 9 damage ignoring armor as the acid leaks into the scratches left by the spears.</p>
-<h4>Stun Damage</h4>
-<p class="NoIndent">Stun damage is non-lethal damage. A PC who takes stun damage is defying danger to do anything at all, the danger being “you’re stunned.” This lasts as long as makes sense in the fiction—you’re stunned until you can get a chance to clear your head or fix whatever stunned you. A GM character that takes stun damage doesn’t count it against their HP but will act accordingly, staggering around for a few seconds, fumbling blindly, etc.</p>
-<h4>Adding and Subtracting Damage</h4>
-<p class="NoIndent">When a move tells you to add damage, you add that damage to the roll on the dice. If it tells you to add some dice (like “+1d4 damage”) you roll that extra dice and add its result to the total.</p>
-<p>The same goes for subtracting damage: you subtract the number from the total rolled. If you subtract a dice (like “-1d6 damage”) you subtract the rolled amount from the original total. Damage never goes negative—0 damage is the minimum.</p>
-<h4>Best and Worst</h4>
-<p class="NoIndent">Some monsters and moves have you roll damage multiple times and take the best or worst result. In this case roll as normal but only apply the best (or worst) result.</p>
-<p>If a monster rolls its d6 damage twice and takes the best result it’s written b[2d6]. The b[] means “best.” Likewise, w[] means worst, so w[3d10] means “roll a d10 for damage three times and use the worst result.”</p>
-<h3>Healing</h3>
+<p class="NoIndent">
+	切砍、瘀青、以及致命傷勢，這些都是冒險者們在地城世界中經常需要面對的危險。在遊戲過程中，角色會受傷、被治療、甚至可能死去。這個系統使用角色的生命值（HP）來衡量他們的健康程度。受到傷害將會使HP減少。而在適當的條件下、或若借助醫藥或魔法的幫助，傷害可以被治療，並使HP回復。</p>
+
+<h3>生命值 (HP)</h3>
+<p class="NoIndent">
+	角色的生命值被用來衡量他們的體力、耐久力、以及健康狀況。生命值越高代表角色能夠酣戰更久、且在直面死神冰冷的凝視之前能夠承受更多的傷害。</p>
+<p>
+	你的職業會決定你的最大生命值。你的體質值（屬性值，而非調整值）也同樣會納入計算，因此越高的體質就代表著越多的生命值。如果你的體質值在遊戲中被永久地改變，你也必須調整你的生命值以反映你新的體質值。除非你的體質值產生了變化，否則你的最大生命值將永遠保持原樣。</p>
+
+<h3>傷害</h3>
+<p class="NoIndent">
+	當角色受到傷害時，他們需要把他們的當前生命值減去受到的傷害。護甲值可以減輕受到的傷害；如果角色擁有護甲值，則他們可以先把受到的傷害減去護甲的數值。這代表來勢洶洶的打擊可能會因為護甲而被完全無效──沒關係，這正是護甲的用途！要注意的是，傷害永遠無法讓角色的生命值被降至 0 以下。</p>
+<p>
+	傷害的多寡由攻擊者決定。玩家角色所造成的傷害將取決於他們的職業、使用的武器、以及他們所採取的動作而定。</p>
+<p>
+	如果某個動作只寫著「造成傷害」，那麼角色只需要擲他們職業的傷害骰，並加上任何來自動作、武器、或其他效果的加減值。但若某個動作特別寫明了傷害量，則優先使用該傷害來代替職業的傷害骰。</p>
+<p>
+	至於怪物擲的傷害骰，則依據他們說明中所列出的數值而定。每當怪物採取了能夠直接傷害到某人的行動時，即使牠們採取的是不同尋常的攻擊手段，牠們永遠使用該傷害骰來決定造成的傷害。</p>
+<p>
+	至於其他傷害源──像是被崩塌高塔的磚瓦砸中、或是失足跌入深坑等等──則交由GM根據以下選項決定：
+<ul>
+	<li>這最多不過造成瘀傷或擦傷： d4 傷害</li>
+	<li>這可能會稍微濺血，但沒什麼好怕的： d6 傷害</li>
+	<li>這可能會打斷骨頭： d8 傷害</li>
+	<li>這足以殺死一個普通人： d10 傷害</li>
+</ul></p>
+<p class="NoIndent">
+	如果傷害源特別浩大、或者傷害因為來自魔法或毒藥而使得護甲無法作用，則可以為傷害添加<tag>無視護甲</tag>的標籤。</p>
+<p>
+	臨時或環境條件形成的護甲，其作用方式與你身上穿戴的防具一模一樣：部分掩護能夠提供 1 點護甲值，而大範圍掩護則能提供 2 點護甲值。</p>
+<p>
+	傷害的造成與否永遠是基於故事情節。那些能造成傷害的動作，像是砍劈，只不過是其中一個例子：這個動作反而更證明了傷害的造成必須基於故事情節。即使沒有任何人採取動作，只要它遵循著敘事的合理性，你就可以對角色們造成傷害。</p>
+<p>
+	失去生命值通常只會是眾多效果的其中一部份。如果是尋常的傷害，像是墜落深坑，那麼失去生命值大概就是全部了。但當傷害帶有具體細節，比如說獸人把你的手臂猛跩脫臼，那麼失去生命值就只會是整個敘事效果的一部分，而非完整的影響。在這個例子中，比起傷害，更重要的是你該如何處置你那條剛被扯爛的手臂：接下來你又該怎麼揮舞長劍或施展法術？同樣的，若你不幸身首分離，那與生命值損失與否無關，這就將直接宣告你的死亡。</p>
+
+<h4>來自複數生物的傷害</h4>
+<p class="NoIndent">
+	只有少數勇敢的怪物膽敢獨自作戰。大部分的生物的身旁都會有其他夥伴與牠並肩作戰，也許牠們背後還有增援，或甚至可能有弓箭手從後方提供掩護，諸如此類。這些情況都可能導致有多個怪物在同時對目標造成傷害。</p>
+<p>
+	如果有複數個生物同時攻擊，為擲牠們當中傷害骰最高的那個擲骰，且每有一個其他怪物，則再加上+1傷害。</p>
+<p class="Example">
+	在拉克絲襲擊哥布林們的防禦工事時，一頭哥布林奧法師（d10+1傷害, 無視護甲）以及三頭哥布林（d6傷害）舉起各自的武器，全都一起朝著拉克絲發射──奧法師扔出了一團強酸法球，而其他人則擲出長矛。我為其中最高的傷害擲骰：d10+1傷害, 無視護甲，並為另外三頭哥布林再加上+3 傷害。在把它們全加在一起之後，我告訴拉克絲，隨著強酸滲入長矛在盔甲留下的縫隙，她將受到 9 點無視護甲的傷害。</p>
+
+<h4>暈眩傷害 (Stun Damage)</h4>
+<p class="NoIndent">
+	暈眩傷害屬於非致命性的傷害。受到暈眩傷害的玩家角色無論做什麼事情都得先進行面對危險的動作，而這危險正是「你被暈眩，動彈不得」。這個影響會一直持續，直到你在故事中能合理的擺脫這個狀況──比如說抓到機會讓腦袋清醒、或搞定任何讓你陷入暈眩的玩意兒。GM控制的角色在受到暈眩傷害時並不會因此減少生命值，但會根據暈眩而做出反應：他們可能會蹣跚遊蕩長達數秒、或是盲目的四處摸索，諸如此類。</p>
+
+<h4>增加或減少傷害</h4>
+<p class="NoIndent">
+	當某個動作要求你增加傷害時，你把該傷害加到你所擲的傷害骰上。如果它要求你增加一些骰子（像是「+1d4傷害」），你擲這些額外的骰子，並將其結果加入傷害總和。</p>
+<p>
+	減少傷害也一樣：你把減少的傷害從你所擲的傷害骰總和中扣除。如果你要減少一顆骰子的值（像是「-1D6傷害」），則你把擲骰結果從原本的傷害總和中扣除。要記住，傷害永遠不會變成負值──傷害的最小值就是 0 點。</p>
+
+<h4>取高或取低</h4>
+<p class="NoIndent">
+	某些怪物和動作會要你擲好幾次骰子，並選擇最好或最糟的結果。在這種狀況下，你如常擲骰，但只取用最好（或最糟）的結果。</p>
+<p>
+	如果某個怪物可以擲二次 d6 傷害骰，並取其最好的結果，則它會寫成 <b>高[2d6]</b>。<b>高[ ]</b>代表著「取高」，同樣的，<b>低[ ]</b>代表著「取低」。因此 <b>低[3d10]</b>代表著「擲d10骰三次，並取其最低的結果作為傷害。」</p>
+
+<h3>治療</h3>
 <p class="NoIndent">There are two sources of healing in Dungeon World: medical aid and the passage of time.</p>
 <p>Medical aid, both magical and mundane, heals damage according to the move or item used. Some moves may fully replenish HP while others heal just enough to keep someone standing through a fight.</p>
 <p>Whenever a character spends some time resting without doing anything to aggravate their wounds they heal. The amount of healing is described in the applicable moves: Make Camp for a night in a dangerous area, Recover for stays in civilization.</p>
 <p>No matter the source of the healing a character’s HP can never increase above their maximum.</p>
-<h3>Death</h3>
+
+<h3>死亡</h3>
 <p class="NoIndent">Death stalks the edges of every battle. A character who is reduced to 0 HP immediately takes his Last Breath. Death comes for commoner and king alike—no stat is added to the Last Breath roll.</p>
 <p>No one knows what lies beyond the Black Gates of Death, but it is said that many secrets of the mortal plane are laid bare in the land of Death’s dominion. When you die, you might just see them.</p>
 <p>Death offers bargains to some, from the simple to the costly. Death is capricious and may ask a favor in the future or exact a toll. He may demand a sacrifice or ask for something strange and seemingly innocent. Death’s whim cannot be predicted.</p>
 <p>Depending on the outcome of the Last Breath the character may become stable. A stable character stays at 0 HP but is alive and unconscious. If they receive healing they regain consciousness and may return to battle or seek safety. If a stable character takes damage again they draw their Last Breath once more and return to face Death.</p>
-<h4>After Death</h4>
+
+<h4>死亡之後</h4>
 <p class="NoIndent">Being an adventurer isn’t easy—it’s cold nights in the wild and sharp swords and monsters. Sooner or later, you’re going to make that long walk to the Black Gates and give up the ghost. That doesn’t mean you have to give it the satisfaction of sticking around. Death, in its way, is just another challenge to conquer. Even dead adventurers can rise again.</p>
 <p>If your character dies you can ask the GM and the other players to try and resurrect you. The GM will tell them what it will cost to return your poor, dead character to life. If you fulfill the GM’s conditions the character is returned to life. The Resurrection spell is a special case of this: the magic of the spell gives you an easier way to get a companion back, but the GM still has a say.</p>
 <p>No matter the prospects of resurrection for now you make a new character. Maybe a hireling becomes a full-fledged adventurer worthy of a whole share and a part in the real action. Maybe the characters in the party find a new friend in a steading, willing to join them. Maybe your character had a vengeful family member who now seeks to take up their blades and spells to make right what happened. In any case, make your new character as you normally would at level 1. If your original character returns to life you can play either character, switching between them as you please (so long as it makes sense).</p>
 <p>GM, when you tell the players what needs to be done to bring their comrade back, don’t feel like it has to derail the flow of the current game. Weave it in to what you know of the world. This is a great opportunity to change focus or introduce an element you’ve been waiting to show off. Don’t feel, either, that it has to be some great and epic quest. If the character died at the end of a goblin pike, maybe all it takes is an awkward walk home and a few thousand gold pieces donated to a local temple. Think about the ramifications of such a charitable act and how it might affect the world. Remember: Death never forgets a soul stolen from his realm.</p>
-<h3>Debilities</h3>
+
+<h3>異常狀態 (Debilities)</h3>
 <p class="NoIndent">Losing HP is a general thing, it’s getting tired, bruised, cut, and so on. Some wounds are deeper though. These are debilities.</p>
 <p><strong>Weak (STR):</strong> You can’t exert much force. Maybe it’s just fatigue and injury, or maybe your strength was drained by magic.</p>
 <p><strong>Shaky (DEX):</strong> You’re unsteady on your feet and you’ve got a shake in your hands.</p>
